--- a/index.html
+++ b/index.html
@@ -58,22 +58,36 @@
             </div>
           </div>
         </section>
-        <section id="news-sidebar">News Sidebar</section>
+        <section id="news-sidebar">
+          <h2>New</h2>
+          <div class="new-item">
+            <h4>Hydrogen VS Electric Cars</h4>
+            <p>Will hydrogen-fueled cars ever catch up to EVs?</p>
+          </div>
+          <div class="new-item">
+            <h4>The Downsides of AI Artistry</h4>
+            <p>
+              What are the possible adverse effects of on-demand AI image
+              generation?
+            </p>
+          </div>
+          <div class="new-item">
+            <h4>Is VC Funding Drying Up?</h4>
+            <p>
+              Private funding by VC firms is down 50% YOY. We take a look at
+              what that means.
+            </p>
+          </div>
+        </section>
         <section id="news-buttom">News Bottom</section>
       </main>
     </div>
     <!-- 
 
-  New 
+    
+  
 
-  Hydrogen VS Electric Cars
-  Will hydrogen-fueled cars ever catch up to EVs?
 
-  The Downsides of AI Artistry
-  What are the possible adverse effects of on-demand AI image generation?
-
-  Is VC Funding Drying Up?
-  Private funding by VC firms is down 50% YOY. We take a look at what that means.
 
   01
   Reviving Retro PCs
