Bottom-news (footer) finished

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
             </div>
           </div>
         </section>
+
         <section id="news-sidebar">
           <h2>New</h2>
           <div class="new-item">
@@ -79,27 +80,42 @@
             </p>
           </div>
         </section>
-        <section id="news-buttom">News Bottom</section>
+
+        <section id="news-buttom">
+          <div class="bottom-new-item">
+            <div class="bottom-image">
+              <img src="./assets/images/image-retro-pcs.jpg" alt="RetroPCs" />
+            </div>
+            <div class="bottom-new-content">
+              <h3>01</h3>
+              <h4>Reviving Retro PCs</h4>
+              <p>What happens when old PCs are given modern upgrades?</p>
+            </div>
+          </div>
+
+          <div class="bottom-new-item">
+            <div class="bottom-image">
+              <img src="./assets/images/image-top-laptops.jpg" alt="Laptops" />
+            </div>
+            <div class="bottom-new-content">
+              <h3>02</h3>
+              <h4>Top 10 Laptops of 2022</h4>
+              <p>Our best picks for various needs and budgets.</p>
+            </div>
+          </div>
+
+          <div class="bottom-new-item">
+            <div class="bottom-image">
+              <img src="./assets/images/image-gaming-growth.jpg" />
+            </div>
+            <div class="bottom-new-content">
+              <h3>03</h3>
+              <h4>The Growth of Gaming</h4>
+              <p>How the pandemic has sparked fresh opportunities.</p>
+            </div>
+          </div>
+        </section>
       </main>
     </div>
-    <!-- 
-
-    
-  
-
-
-
-  01
-  Reviving Retro PCs
-  What happens when old PCs are given modern upgrades?
-
-  02
-  Top 10 Laptops of 2022
-  Our best picks for various needs and budgets.
-
-  03
-  The Growth of Gaming
-  How the pandemic has sparked fresh opportunities.
--->
   </body>
 </html>
