--- a/index.html
+++ b/index.html
@@ -29,13 +29,29 @@
         <div class="logo">
           <img src="./assets/images/logo.svg" alt="SiteLogo" />
         </div>
-        <nav>
+        <nav class="desktop-nav">
           <a href="#">Home</a>
           <a href="#">New</a>
           <a href="#">Popular</a>
           <a href="#">Trending</a>
           <a href="#">Categories</a>
         </nav>
+        <img class="hamburger-menu-open" src="./assets/images/icon-menu.svg" />
+        <!-- HAMBURGER MENU -->
+
+        <div class="hamburger-menu-wrapper">
+          <div class="hamburger-menu-transparent-overlay"></div>
+          <div class="mobile-nav-wrapper">
+            <img class="close-icon" src="./assets/images/icon-menu-close.svg" />
+            <nav class="mobile-nav">
+              <a href="#">Home</a>
+              <a href="#">New</a>
+              <a href="#">Popular</a>
+              <a href="#">Trending</a>
+              <a href="#">Categories</a>
+            </nav>
+          </div>
+        </div>
       </header>
       <main>
         <section id="featured-new">
@@ -117,5 +133,7 @@
         </section>
       </main>
     </div>
+
+    <script src="./App.js"></script>
   </body>
 </html>
